--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
         <a href="Excersise1/index.html">Visit Index Page</a>
       </div>
       <div class="index-page-exercise-row">
-        <h2>Excersise 2: Coming Soon!</h2>
-        <a href="Excersise2/index.html">Visit Index Page</a>
+        <h2>Excersise 2: </h2>
+        <p>Για να αποκτήσετε πρόσβαση στην 2η Άσκηση βεβαιωθείτε ότι έχετε ακολουθήσει τις οδηγίες των README-client.md και README-server.md</p>
+        <p>Εκινήστε πρώτα τον Client και στην συνέχεια τον Server με τις εντολές που αναγράφονται στα παραπάνω αρχεία</p>
+        <a href="http://localhost:5173">Visit Home Page</a>
       </div>
     </div>
   </body>
